@@ -1221,6 +1221,7 @@ PHP_MINIT_FUNCTION(mapscript)
     PHP_MINIT(line)(INIT_FUNC_ARGS_PASSTHRU);
     PHP_MINIT(shape)(INIT_FUNC_ARGS_PASSTHRU);
     PHP_MINIT(shapefile)(INIT_FUNC_ARGS_PASSTHRU);
+    PHP_MINIT(cluster)(INIT_FUNC_ARGS_PASSTHRU);
     PHP_MINIT(layer)(INIT_FUNC_ARGS_PASSTHRU);
     PHP_MINIT(map)(INIT_FUNC_ARGS_PASSTHRU);
 
